fix: Adjust header height for better responsiveness on smaller screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -164,11 +164,12 @@ header {
 @media screen and (max-width: 1024px) {
   header {
     flex-direction: column;
-    height: 4rem;
+    height: 3.5rem;
     background-color: transparent;
 
     #title-container {
       width: 100%;
+      height: 100%;
       padding: 0;
       flex-direction: row;
       gap: 1rem;
